<resources>
    <string name="add_a_course">Add/Delete a Course</string>
    <string name="add_assessment_to_course">Add an Assessment to a Course</string>
    <string name="add_course_to_term">Add a Course To a Term</string>
    <string name="add_delete_assessment">Add/Delete Assessment</string>
    <string name="add_sample_data">Add Sample Data</string>
    <string name="app_name">Student Scheduler</string>
    <string name="assessment_course_id">Assessment\nCourse ID</string>
    <string name="assessment_course_id_ex">Course ID</string>
    <string name="assessment_course_name_ex">Course Name</string>
    <string name="assessment_details_title">Assessment Details</string>
    <string name="assessment_end_date">Assessment\nEnd Date</string>
    <string name="assessment_list_button">Assessment List</string>
    <string name="assessment_list_menu_item">Assessment Screen</string>
    <string name="assessment_list_title">Assessment List</string>
    <string name="assessment_name">Assessment\nName</string>
    <string name="assessment_name_ex">Name</string>
    <string name="assessment_start_date">Assessment\nStart Date</string>
    <string name="cannot_delete_term">Cannot delete this Term while there are course assigned to it.</string>
    <string name="channel_description">Notifications for Student Scheduler App</string>
    <string name="channel_name">StudentSchedulerChannel</string>
    <string name="course_details_title">Course Details</string>
    <string name="course_end_date">Course\nEnd Date</string>
    <string name="course_instructor_name">Instructor\nName</string>
    <string name="course_list_button">Course List</string>
    <string name="course_list_menu_item">Course Screen</string>
    <string name="course_list_title">Course List</string>
    <string name="course_name">Course\nName</string>
    <string name="course_name_ex">Course Name</string>
    <string name="course_start_date">Course\nStart Date</string>
    <string name="course_term_id">Term ID</string>
    <string name="course_term_name_ex">Term Name</string>
    <string name="courses_term_id">Course\nTerm ID</string>
    <string name="date_ex">MM/dd/yyyy</string>
    <string name="delete_button">Delete</string>
    <string name="floating_add_desc">Blue plus sign</string>
    <string name="home_screen_title">Student Scheduler</string>
    <string name="instructor_email">Email</string>
    <string name="instructor_email_ex">xx@xx.xxx</string>
    <string name="instructor_list_button">Instructor List</string>
    <string name="instructor_list_title">Instructor List</string>
    <string name="instructor_name">Instructor Name</string>
    <string name="instructor_phone">Phone</string>
    <string name="instructor_phone_ex">123–456–7890</string>
    <string name="instructor_title">Instructor Details</string>
    <string name="john_doe">John Doe</string>
    <string name="no_assessment_listed">No Assessment Listed</string>
    <string name="no_course_list">No Courses Listed</string>
    <string name="no_instructor_listed">No Instructor Listed</string>
    <string name="no_instructor_selected">"No Instructor Selected"</string>
    <string name="no_terms_listed">No Terms Listed</string>
    <string name="notes">Notes</string>
    <string name="notify_end">End Date Notification</string>
    <string name="notify_start">Start Date Notification</string>
    <string name="save_button">Save</string>
    <string name="share_note">Share Note</string>
    <string name="spinner_text">Status</string>
    <string name="start_icon_desc">Yellow background with a blue graduate hat</string>
    <string name="term_details_title">Term Details</string>
    <string name="term_end">Term\nEnd Date</string>
    <string name="term_id">Term ID</string>
    <string name="term_list_button">Term List</string>
    <string name="term_list_menu_item">Term Screen</string>
    <string name="term_list_title">Term List</string>
    <string name="term_name">Term\nName</string>
    <string name="term_sample_text">Freshmen Fall</string>
    <string name="term_start">Term\nStart Date</string>

    <string name="assessment_course_id_land">Assessment Course ID</string>
    <string name="assessment_end_date_land">Assessment End Date</string>
    <string name="assessment_name_land">Assessment Name</string>
    <string name="assessment_start_date_land">Assessment Start Date</string>
    <string name="course_end_date_land">Course End Date</string>
    <string name="course_instructor_name_land">Instructor Name</string>
    <string name="course_name_land">Course Name</string>
    <string name="course_start_date_land">Course Start Date</string>
    <string name="courses_term_id_land">Course Term ID</string>
    <string name="term_end_land">Term End Date</string>
    <string name="term_name_land">Term Name</string>
    <string name="term_start_land">Term Start Date</string>
    <string name="home_screen">Home Screen</string>

    <string-array name="assessment_type_list">
        <item>Performance</item>
        <item>Objective</item>
    </string-array>

    <string-array name="course_status_list">
        <item>In Progress</item>
        <item>Completed</item>
        <item>Plan to Take</item>
        <item>Dropped</item>
    </string-array>

</resources>