<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.CourseDetails">

    <ScrollView
        android:id="@+id/courseDetails_SV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat

            android:id="@+id/courseButtonLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:text="@string/course_name"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/courseNameET"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="courseNameET"
                    android:hint="@string/course_name_ex"
                    android:inputType="text" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:text="@string/course_start_date" />

                <EditText
                    android:id="@+id/courseStartDateET"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusable="false"
                    android:hint="@string/date_ex"
                    android:inputType="date" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:text="@string/course_end_date" />

                <EditText
                    android:id="@+id/courseEndDateET"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusable="false"
                    android:hint="@string/date_ex"
                    android:inputType="date" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:text="@string/course_instructor_name"
                    app:layout_constraintTop_toTopOf="parent" />

                <Spinner
                    android:id="@+id/courseInstructorNameSpinner"
                    android:layout_width="200dp"
                    android:layout_height="match_parent" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/courseInstructorAdd"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:contentDescription="@string/floating_add_desc"
                    app:srcCompat="@drawable/instructor_add_24" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:text="@string/share_note"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/courseShareNoteET"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="endDate"
                    android:hint="@string/notes"
                    android:inputType="text" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <Spinner
                android:id="@+id/courseStatusSpinner"
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent">

                <Button
                    android:id="@+id/saveCourse"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="210dp"
                    android:layout_height="match_parent"
                    android:text="@string/save_button"
                    app:layout_constraintRight_toRightOf="parent" />

                <Button
                    android:id="@+id/deleteCourse"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:text="@string/delete_button" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/courseDetailsRecycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courseDetails_SV" />

</androidx.constraintlayout.widget.ConstraintLayout>