<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.AddCourseToTerm">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/courseToTermBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/course_name" />

        <Spinner
            android:id="@+id/addCourseToTermSpinner"
            android:layout_width="310dp"
            android:layout_height="match_parent" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/saveCourseToTerm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/save_button"
        app:layout_constraintTop_toBottomOf="@+id/courseToTermBox"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/deleteCourseFromTerm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/delete_button"
        app:layout_constraintTop_toBottomOf="@+id/saveCourseToTerm"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>