<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="5dp">

        <TextView
            android:id="@+id/instructorNameTV"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:padding="10dp"
            android:text="@string/instructor_name"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/assessmentStartDateTV"
            tools:layout_editor_absoluteY="21dp" />

        <TextView
            android:id="@+id/instructorPhoneTV"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:padding="10dp"
            android:text="@string/instructor_phone_ex"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/assessmentStartDateTV"
            tools:layout_editor_absoluteY="21dp" />

        <TextView
            android:id="@+id/instructorEmailTV"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:padding="10dp"
            android:text="@string/instructor_email_ex"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/assessmentStartDateTV"
            tools:layout_editor_absoluteY="21dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>