<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.InstructorDetails">

    <ScrollView
        android:id="@+id/instructorDetails_SV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="48dp"
                    android:layout_margin="2dp"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/instructor_name" />

                <EditText
                    android:id="@+id/instructorNameET"
                    android:layout_width="200dp"
                    android:layout_height="48dp"
                    android:hint="@string/john_doe"
                    android:inputType="textPersonName" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="48dp"
                    android:layout_margin="2dp"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/instructor_phone" />

                <EditText
                    android:id="@+id/instructorPhoneET"
                    android:layout_width="200dp"
                    android:layout_height="48dp"
                    android:hint="@string/instructor_phone_ex"
                    android:inputType="phone" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="48dp"
                    android:layout_margin="2dp"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/instructor_email" />

                <EditText
                    android:id="@+id/instructorEmailET"
                    android:layout_width="200dp"
                    android:layout_height="48dp"
                    android:hint="@string/instructor_email_ex"
                    android:inputType="textEmailAddress" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/buttonBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/saveInstructor"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/save_term" />

                <Button
                    android:id="@+id/deleteInstructor"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_term" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/instructorListRecycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructorDetails_SV" />

</androidx.constraintlayout.widget.ConstraintLayout>