<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.TermDetails">

    <ScrollView
        android:id="@+id/termDetailsScrollView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:paddingTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:text="@string/term_id" />

                <TextView
                    android:id="@+id/termIDTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:paddingRight="25dp"
                    android:text="@string/term_name" />

                <EditText
                    android:id="@+id/termNameEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Freshmen Fall Term" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:text="@string/term_start" />

                <EditText
                    android:id="@+id/termStartDateEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="01/01/2022" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:text="@string/term_end" />

                <EditText
                    android:id="@+id/termEndDateEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="01/01/2022" />

            </LinearLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/saveTerm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="60dp"
                    android:text="@string/save_term" />

                <Button
                    android:id="@+id/deleteTerm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginHorizontal="50dp"
                    android:text="@string/delete_term"
                    app:layout_constraintRight_toRightOf="parent" />
            </androidx.appcompat.widget.LinearLayoutCompat>

        </LinearLayout>
    </ScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/termDetailsCourseListRecycler"
        android:layout_width="match_parent"
        android:layout_height="440dp"
        app:layout_constraintBottom_toTopOf="@+id/termDetailsFAB"
        app:layout_constraintTop_toBottomOf="@+id/termDetailsScrollView" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/termDetailsFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/floating_add_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/ic_baseline_add_24" />

</androidx.constraintlayout.widget.ConstraintLayout>